--- a/TANXIAOBODB.a_person.json
+++ b/TANXIAOBODB.a_person.json
@@ -2,9 +2,9 @@
   "_id": {
     "$oid": "65cd2576436dabb79c0c0c9e"
   },
-  "userid": "001",
+  "userid": "1",
   "usename": "guangtouqiang",
-  "phoneNum": "12345"
+  "phoneNum": "12345ddddddcccd"
 },
 {
   "_id": {
